2007-03-17	kaffeetisch

	Merge from HEAD:

	* xs/GtkTextBufferRichText.xs: Patch from Mario Fischer fixes a
	compilation problem that occurs when using MS' compiler.

2007-03-12	kaffeetisch

	* Gtk2.pm, NEWS, README: Stable release 1.144.

2007-03-11	kaffeetisch

	Merge from HEAD:

	* t/GtkEditable.t
	* xs/GtkEditbale.xs: Patch from Roderich Schupp fixes string
	encoding problems in the insert-text signal marshaller.

2007-02-25	kaffeetisch

	* Gtk2.pm, NEWS, README: Stable release 1.143.

2007-02-24	kaffeetisch

	Merge from HEAD:

	* Gtk2.pm, t/GtkTreeModelSort.t, xs/GtkTreeModelSort.xs: Make sure
	calling get() on a Gtk2::TreeModelSort resolves to
	Gtk2::TreeModel::get if appropriate, and, to keep backwards
	compatibility, to Glib::Object::get otherwise.

2007-02-21	kaffeetisch

	Merge from HEAD:

	* t/GtkTreeModelSort.t, xs/GtkTreeModelSort.xs: fix copy and paste
	error that made gtk_tree_model_sort_convert_child_iter_to_iter()
	unusable.  Reported by Adrian Priscak.  Also, make sure we got it
	right this time.

2007-01-21	kaffeetisch

	* Gtk2.pm, NEWS, README, copyright.pod: Stable release 1.142.

2007-01-08	kaffeetisch

	Merge from HEAD:

	* t/GtkIconView.t, xs/GtkIconView.xs: Fix the path handling in
	Gtk2::IconView::get_selected_items.  Previously, the returned
	paths were pointing to dead memory and any attempt to use them
	caused havoc.

	* xs/GtkRecentManager.xs: Add more documentation for the
	Gtk2::RecentManager::add_item and Gtk2::RecentManager::add_full
	methods; define the needed keys for the hashref to be passed
	to the add_full method.

2006-12-30	kaffeetisch

	Merge from HEAD:

	* GtkTreeSortable.xs: Don't segfault in the GET_SORT_COLUMN_ID
	marshaller if any of the output parameter pointers is NULL.  Patch
	by muppet.

2006-11-19	kaffeetisch

	* Gtk2.pm, NEWS, README: Stable release 1.141.

2006-11-19	kaffeetisch

	Merge from HEAD:

	* doctypes: List GdkPixbufFormat as "hash reference".
