@@ -4,7 +4,7 @@
 
 ###############################################################################
 
-use Gtk2::TestHelper tests => 29, noinit => 1;
+use Gtk2::TestHelper tests => 29;
 
 ###############################################################################
 
